[jquery.footHovzer] new plugin for mw-log-console and mw-debug-toolbar * Previously mw.log and mw.Debug both were in a fixed container on the bottom, overlapping each other. mw.log did increase the body's padding-bottom to account for the height so that all content is still visible, but it was still a problem when mw.Debug came along. * This plugin adds a single fixed position element to bottom of the body, to which other stuff like mw.log and mw.Debug can append a non-fixed position container. That will take care of it. * Method update() will re-check the padding and scroll position and fix where needed * Reduces code a little bit

--- a/resources/mediawiki/mediawiki.debug.css
+++ b/resources/mediawiki/mediawiki.debug.css
@@ -1,8 +1,6 @@
 .mw-debug {
 	width: 100%;
 	text-align: left;
-	position: fixed;
-	bottom: 0;
 	background-color: #eee;
 	border-top: 1px solid #aaa;
 }
